--- a/myApp/src/pages/canvas/canvas.scss
+++ b/myApp/src/pages/canvas/canvas.scss
@@ -1,3 +1,13 @@
 page-canvas {
-
+    height: 100%;
+    width: 100%;
+    display: block;
+    #top-toolbar {
+        position: absolute;
+        top: 0;
+    }
+    #bottom-toolbar {
+        position: absolute;
+        bottom: 0;
+    }
 }
