--- a/myApp/src/pages/calc/calc.scss
+++ b/myApp/src/pages/calc/calc.scss
@@ -1,46 +1,49 @@
 page-calc {
 
-    
+    #container {
+        margin: auto;
+        width: 95%;
+        height: 95%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
 
     .display {
-        margin: 2%;
-        width: 94%;
+        width: 100%;
         height: 12%;
 
         background: whitesmoke;
         color: black;
-        font-size: 2em sans-serif;
+        font: 2em sans-serif;
         border-radius: 5px;
 
     }
 
 
-    input {
-        margin: 2%;
-        width: 20%;
-        height: 12%;
+    button {
+        width: 22%;
+        height: 50px;
 
-        background: lightskyblue;
-        color: white;
+        // background: lightskyblue;
+        color: black;
         border-radius: 20px;
         transition-duration: 0.1s;
-        cursor: pointer;
         font: 2em sans-serif;
 
     }
 
 
 
-    input:active {
-        transform: translateY(3px);
+    button:active {
+        transform: translateY(1px);
     }
 
-    input.equals {
+    button.equals {
         background: lightgrey;
-        margin: 2%;
         width: 44%;
-        height: 12%;
-
     }
 
 }
