--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -22,6 +22,14 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
+// $background-color: rgb(209, 232, 255);
+$toolbar-background:#488aff;
+$toolbar-text-color: black;
+
+// $tabs-background: thistle;
+// $tabs-tab-color-active: red;
+
+$button-ios-height: 10%;
 
 
 
