--- a/myApp/src/pages/my-script-canvas/my-script-canvas.scss
+++ b/myApp/src/pages/my-script-canvas/my-script-canvas.scss
@@ -1,11 +1,19 @@
 
 @import 'myscript/dist/myscript.min.css';
 
-page-my-script-canvas {
+// page-my-script-canvas {
 
-    #editor {
-    min-width: 500px;
-    max-width: 500px;
-    }
-    
+//     #editor {
+//     // min-width: 500px;
+//     // max-width: 500px;
+//     // min-height: 500px;
+//     // max-height: 500px;
+//     width: 100%;
+//     height: 100%;
+//     }
+// }
+
+.editor {
+    height: 100vh;
+    width: 100vh;
 }
