--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -22,14 +22,6 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-// $background-color: rgb(209, 232, 255);
-$toolbar-background:#488aff;
-$toolbar-text-color: black;
-
-// $tabs-background: thistle;
-// $tabs-tab-color-active: red;
-
-$button-ios-height: 10%;
 
 
 
@@ -46,9 +38,21 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
-);
+  dark:       #222,
+  gradient-light:  rgb(83, 224, 210),
+  gradient-dark: rgb(36, 105, 233)
+  );
 
+// $background-color: rgb(209, 232, 255);
+$toolbar-background: color($colors, primary);
+$toolbar-text-color: black;
+
+
+
+// $tabs-background: color($colors, gradient-dark);
+// $tabs-tab-color-active: color($colors, gradient-light);
+
+// $button-height: 10%;
 
 // App iOS Variables
 // --------------------------------------------------
