--- a/myApp/src/pages/my-script-canvas/my-script-canvas.scss
+++ b/myApp/src/pages/my-script-canvas/my-script-canvas.scss
@@ -1,7 +1,11 @@
 page-my-script-canvas {
     @import "../../../node_modules/myscript/dist/myscript.min";
 
+
+    overflow: hidden;
+
     .editor {
         height: 100vh;
     } 
+
 }
