--- a/myApp/src/pages/calc/calc.scss
+++ b/myApp/src/pages/calc/calc.scss
@@ -1,5 +1,7 @@
 page-calc {
 
+    overflow: hidden;
+
     #container {
         margin: auto;
         width: 95%;
@@ -27,16 +29,17 @@ page-calc {
     .deleteButton {
         width: 20%;
         height: 12%;
+        margin-top: 0px;
 
-        background: whitesmoke;
-        color: grey;
+        // background: whitesmoke;
+        // color: grey;
         // border-radius: 20px;
         // transition-duration: 0.1s;
         // font-size: 2em;
         // font-family: sans-serif;
         font-size: 1.7em;
         font-family: sans-serif;
-        border-radius: 0px;
+        border-radius: 5px;
 
     }
 
@@ -62,10 +65,10 @@ page-calc {
 
     button.equals {
         // background: lightgrey;
-        background: whitesmoke;
+        // background: whitesmoke;
         // color: rgb(44, 128, 255);
-        color: color($colors, primary);
-        width: 44%;
+        // color: color($colors, primary);
+        width: 47%;
 
         :active {
             background: whitesmoke; 
