--- a/src/pages/my-script-canvas/my-script-canvas.scss
+++ b/src/pages/my-script-canvas/my-script-canvas.scss
@@ -8,4 +8,13 @@ page-my-script-canvas {
         height: 100vh;
     } 
 
+    #container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    button {
+        width: 24%;
+    }
 }
