removed scroll options

--- a/src/pages/calc/calc.scss
+++ b/src/pages/calc/calc.scss
@@ -26,6 +26,12 @@ page-calc {
 
     }
 
+    .no-scroll {
+        .scroll-content{
+            overflow: hidden;
+        }
+      }
+
     .deleteButton {
         width: 20%;
         height: 12%;
