changed video borders so that thd title wasnt being cut off

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -9,12 +9,12 @@ page-about {
     }
 
     h2 {
-        text-align: center
+        text-align: center;
     }
 
     video {
         width: 90%;
-        margin: 5%; 
+        margin: 0%; 
 
         border: 5px solid lightgrey;
         border-radius: 10px;
